# backend/src/routes/auth/auth.router.ts
@@ -6,6 +6,8 @@ const router =express.Router();
 
 router.post('/signup', authController.signup);
 router.post('/pro/signup', authController.signup);
+router.post('/forget-password', authController.forgetPassword);
+router.post('/password-reset-update/:userId/:token', authController.resetPassword);
 
 router.post('/login', authController.login);
 router.get('/auth/google', authController.loginWithGoogle);
